syntax = "proto3";

option csharp_namespace = "RestGrpcProxy.Protos";

package com.fss.airline.test;

service TestService {
	rpc GetTestValue(Empty) returns (TestValue);
	rpc GetTestValues(PageInfo)returns(TestValues);
}

message Empty {

}

message TestValue{
	string id = 1;
	int32 amount = 2; 
}

message PageInfo {
	string cursor = 1;
	string next_cursor = 2;
	bool is_last = 3;
}

message TestValues {
	repeated TestValue values = 1;
	PageInfo page_info = 2;
}